<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPredictionActivity">

    <View
        android:id="@+id/divider_upper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d0d0d0"
        app:layout_constraintTop_toTopOf="@+id/barrier_lower"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_set_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowRadius="5"
        android:text="@string/set_due_date"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_unresolve"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_create_due_date" />

    <TextView
        android:id="@+id/text_create_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/created"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier_upper" />

    <TextView
        android:id="@+id/text_prediction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/barrier_upper"
        app:layout_constraintEnd_toStartOf="@+id/text_probability"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_probability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/barrier_upper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="text_prediction,text_probability"
        tools:layout_editor_absoluteY="731dp" />

    <TextView
        android:id="@+id/text_resolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/unresolved"
        app:layout_constraintEnd_toStartOf="@+id/text_probability"
        app:layout_constraintTop_toTopOf="@+id/barrier_upper" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btn_unresolve,btn_yes,btn_no"
        tools:layout_editor_absoluteY="731dp" />

    <Button
        android:id="@+id/btn_unresolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowRadius="5"
        android:text="@string/unresolve"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btn_yes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_set_due_date"
        app:layout_constraintTop_toBottomOf="@+id/text_create_due_date" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowRadius="5"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_no"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_unresolve"
        app:layout_constraintTop_toBottomOf="@+id/text_create_due_date" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowRadius="5"
        android:text="@string/no"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_yes"
        app:layout_constraintTop_toBottomOf="@+id/text_create_due_date" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFE5E5E5"
        app:layout_constraintBottom_toTopOf="@+id/divider_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_upper">

        <LinearLayout
            android:id="@+id/table_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider_lower"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d0d0d0"
        app:layout_constraintBottom_toTopOf="@+id/constraint_layout"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/note_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_note"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect|textCapSentences"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_create_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_create_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="createNote"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowRadius="5"
            android:text="@string/button_create"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/divider_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_upper" />

</androidx.constraintlayout.widget.ConstraintLayout>