<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorIsNice"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@android:color/white"
            app:tabTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFE5E5E5"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="56dp"
        tools:showIn="@layout/activity_main">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/divider_lower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_lower"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d0d0d0"
            app:layout_constraintBottom_toTopOf="@+id/constraint_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/text_new_prediction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:breakStrategy="high_quality"
                android:ems="10"
                android:hint="@string/prediction_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect|textCapSentences"
                android:nextFocusDown="@+id/text_new_prediction_probability"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp"
                android:scrollHorizontally="false"
                android:singleLine="false"
                app:layout_constraintBottom_toTopOf="@+id/btn_set_due_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_new_prediction_probability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/probability_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_set_due_date"
                app:layout_constraintEnd_toStartOf="@+id/perc"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_set_due_date" />

            <Button
                android:id="@+id/btn_set_due_date"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:onClick="onDueDateClicked"
                android:padding="4dp"
                android:text="@string/no_due_date"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_new_prediction_probability"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_predict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onPredictClicked"
                android:padding="4dp"
                android:shadowColor="@color/colorPrimaryDark"
                android:shadowRadius="5"
                android:text="@string/predict"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/perc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/perc" />

            <TextView
                android:id="@+id/perc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/percent"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_new_prediction_probability"
                app:layout_constraintEnd_toStartOf="@+id/btn_predict"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_new_prediction_probability" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>